--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,18 @@
 			<artifactId>spring-security-test</artifactId>
 		</dependency>
 		
+		<!--  Hibernate validator -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		
+		<!-- web -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
