--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,19 @@
     
 language: java
+sudo: false
+install: true
+addons:
+  sonarcloud:
+    organization: "your_organization_key"
+    token:
+      secure: "$SONAR_TOKEN"
 jdk:
   - oraclejdk8
+script:
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+cache:
+  directories:
+    - '$HOME/.m2/repository'
+    - '$HOME/.sonar/cache'
 before_install:
   - chmod +x mvnw
