--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: false
 install: true
 addons:
   sonarcloud:
-    organization: "your_organization_key"
+    organization: "tulioviglione-github"
     token:
       secure: "$SONAR_TOKEN"
 jdk:
