--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,13 @@
 			<version>3.6</version>
 		</dependency>
 		
+		<!-- JWT Token -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.7.0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
