--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,12 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
 
 #desabilita validação basica. Utilizado controle de acesso JWT
-security.basic.enabled=false 
+#security.basic.enabled=false 
 
 #paginacao
 paginacao.qtd_por_pagina=25
+
+# JWT
+jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+# token com duração de 7 dias
+jwt.expiration=604800
